--- a/sections/lookbook.liquid
+++ b/sections/lookbook.liquid
@@ -1,3 +1,6 @@
+{{ 'lookbook.css' | asset_url | stylesheet_tag }}
+{{ 'lookbook.js' | asset_url | script_tag }}
+
 <section class="lookbook center">
 
     <h2 class="inline-richtext h1 scroll-trigger animate--slide-in">{{ section.settings.lookbook_title }}</h2>
@@ -21,8 +24,8 @@
                     {% endif %}
 
                     <div class="lookbook_details">
-                        <h3>
-                            <a href="{{ product.url }}" class="lookbook_link">
+                        <h3 class="lookbook_product-title">
+                            <a href="{{ product.url }}" class="lookbook_link full-unstyled-link">
                                 {{ product.title }}
                             </a>
                         </h3>
@@ -32,46 +35,7 @@
             </div>
         {% endfor %}
     </div>
-
 </section>
-
-<style>
-    .lookbook_products-container {
-        display: flex;
-        flex-wrap: wrap;
-        max-width: 1800px;
-        margin: auto;
-    }
-
-    .lookbook_product {
-        width: calc(100%/4);
-        position: relative;
-    }
-
-    .lookbook_link {
-        display: block;
-        position: relative;
-    }
-
-    .lookbook_details {
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        background: rgba(255, 255, 255, .7);
-        height: 150px;
-        width: 150px;
-        padding: 0 10px;
-        transition: .3s ease;
-        z-index: 1;
-        /* opacity: 0; */
-    }
-
-    .lookbook_image {
-        width: 100%;
-    }
-</style>
 
 {%  schema %}
     {
