fix: prevent images from being draggable

--- a/sections/lookbook.liquid
+++ b/sections/lookbook.liquid
@@ -17,6 +17,7 @@
                                 src="{{ product.featured_media | image_url: width: 300 }}"
                                 alt="{{ product.featured_media.alt | escape }}"
                                 class="motion-reduce lookbook_image"
+                                draggable="false"
                             >
                         </div>
                     {% else  %}
