--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -296,6 +296,9 @@
         document.documentElement.classList.add('shopify-design-mode');
       }
     </script>
+    
+    {{ 'lookbook.css' | asset_url | stylesheet_tag }}
+    {{ 'lookbook.js' | asset_url | script_tag }}
   </head>
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
