docs: add comments lookbook templates and minor css adjustments

--- a/sections/lookbook.liquid
+++ b/sections/lookbook.liquid
@@ -1,3 +1,13 @@
+{% comment %}
+    Lookbook Section
+
+    Displays a curated collection of products as a lookbook.
+
+    Setup:
+    - Configure Lookbooks under Metaobject
+    - Configure this section in the theme editor
+{% endcomment %}
+
 <section class="lookbook center">
 
     <h2 class="inline-richtext h1 scroll-trigger animate--slide-in">{{ section.settings.lookbook_title }}</h2>
