--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -727,6 +727,9 @@
 {% comment %} 
     ------------------- Custom Show Related Lookbook section below -------------------
         This section displays lookbooks that contain the current product.
+
+    Setup:
+    - Enable 'Show Related Lookbook' checkbox under product page > product settings 
 {% endcomment %}
 
 {% comment %} 
