--- a/assets/lookbook.css
+++ b/assets/lookbook.css
@@ -2,6 +2,7 @@
 .lookbook_products-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     max-width: 1800px;
     margin: auto;
 }
@@ -13,7 +14,7 @@
 
 @media (min-width: 600px){
     .lookbook_product {
-        width: calc(100%/4);
+        width: calc(100%/5);
     }
 }
 
