refactor: addd product_found to stop unnecessary looping

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -780,14 +780,19 @@
               {% if lookbook_product_gids.size > 0 %}
                 <div class="scroll-trigger  animate--slide-in lookbook_products-container">
 
+                  {% comment %} Loop through all products to find those matching product IDs from the Lookbook {% endcomment %}
                   {%- for product_gid in lookbook_product_gids -%}
-                    {% comment %} {{product_gid}} {% endcomment %}
-                    {% comment %} Loop through all products to find those matching product IDs from the Lookbook {% endcomment %}
-                    {%- for item in collections.all.products -%}
-                      {% assign item_id = 'gid://shopify/Product/' | append: item.id %}
+                    {% assign product_found = false %}
 
-                      {% if item_id == product_gid %}
-                        {% include 'lookbook-product-display' %}
+                    {%- for item in collections.all.products -%}
+                      {% if product_found == false %}
+                        {% assign item_id = 'gid://shopify/Product/' | append: item.id %}
+
+                        {% if item_id == product_gid %}
+                          {% include 'lookbook-product-display' %}
+                          {% assign product_found = true %}
+                        {% endif %}
+                        
                       {% endif %}
                     {%- endfor -%}
                   {%- endfor -%}
