style: minor css update

--- a/sections/lookbook.liquid
+++ b/sections/lookbook.liquid
@@ -8,7 +8,7 @@
     - Configure this section in the theme editor
 {% endcomment %}
 
-<section class="lookbook center">
+<section class="lookbook center page-width">
 
     <h2 class="inline-richtext h1 scroll-trigger animate--slide-in">{{ section.settings.lookbook_title }}</h2>
     <p>{{ section.settings.lookbook_desc }}</p>
